# RectangleCPPJunior2023

./: CMakeLists.txt  Rectangle.cpp  Rectangle.h  main.cpp
include/: Rectangle.h
test/: CMakeLists.txt  rectangle_test.cpp
